テンプレートしてくぞ

--- a/templates/rank/detail.html
+++ b/templates/rank/detail.html
@@ -1,6 +1,8 @@
-<!doctype html>
-<html lang="ja">
+{% extends 'base.html' %}
 {% load static %}
+
+{% block title %}詳細画面{% endblock %}
+
 <head>
     <!--各タイトル格納-->
     <title></title>
@@ -20,7 +22,7 @@
 
 </head>
 
-
+{% block content %}
 <h3>データ一覧</h3>
 <!-- card　タブ変えたときの枠の高さを統一したい -->
 <div id="card" class="row" style="margin-top:-60px; padding-top:60px;">
@@ -92,3 +94,4 @@
     {% endfor %}
 </table>
 
+{% endblock %}
