--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,8 @@
 <!doctype html>
 <html lang="ja">
 {% load static %}
+
+<!--baseヘッダー-->
 <head>
     <!--各タイトル格納-->
     <title>{% block title %}{% endblock %}</title>
@@ -42,32 +44,33 @@
     {% block header %}{% endblock %}
 </head>
 
+<!--各ヘッダー格納-->
 <body class="pt-5">
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
     <div class="container-fluid">
         <!--todo プロジェクトのトップページ　URLパラメーターで送れない-->
-        <a class="navbar-brand" href="/isk_tools/">ISKツールトップ</a>
+        <a class="navbar-brand" href="{% url 'top' %}">TOP</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <ul class="navbar-nav me-auto mb-2 mb-md-0">
                 <li class="nav-item active">
-                    <a class="nav-link" aria-current="page" href="">ホーム</a>
+                    <a class="nav-link" aria-current="page" href="">(工事中)ホーム</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'admin:password_change' %}">パスワードの変更</a>
+                    <a class="nav-link" href="{% url 'admin:password_change' %}">(工事中)パスワードの変更</a>
                 </li>
                 <li class="nav-item">
                     <!--todo ログアウトページ　URLパラメーターで送れない-->
-                    <a class="nav-link" href="/accounts/logout/">ログアウト</a>
+                    <a class="nav-link" href="/accounts/logout/">(工事中)ログアウト</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"></a>
                 </li>
             </ul>
             <span class="navbar-text">
-                ログインユーザー：{{ department }}　{{ request.user.last_name }}　{{ request.user.first_name }}　　
+                (工事中)ログインユーザー：{{ department }}　{{ request.user.last_name }}　{{ request.user.first_name }}　　
             </span>
         </div>
     </div>
