--- a/templates/rank/detail.html
+++ b/templates/rank/detail.html
@@ -2,25 +2,7 @@
 {% load static %}
 
 {% block title %}詳細画面{% endblock %}
-
-<head>
-    <!--各タイトル格納-->
-    <title></title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-
-    <!-- Favicons -->
-
-    <!--各ヘッダー格納-->
-
-</head>
+{% block header %}{% endblock %}
 
 {% block content %}
 <h3>データ一覧</h3>
