--- a/templates/rank/top.html
+++ b/templates/rank/top.html
@@ -53,7 +53,7 @@
                     <option value="{{ app.name }}">{{ category2.category2 }}</option>
                 {% endfor %}
             </select>
-            <div class="col-2"><button class="btn btn-primary mt-2" type="submit">絞り込み</button></div>
+            <div class="col-2"><button class="btn btn-primary mt-2" type="submit">登録</button></div>
         </div>
     </div>
 </form>
