--- a/templates/rank/top.html
+++ b/templates/rank/top.html
@@ -37,26 +37,40 @@
 <!--    </select>-->
 <!--</div>-->
 <!--<button class="btn btn-primary w-10 btn-lg" type="button" onclick="location.href=''">変更管理新規登録</button>-->
-{% endcomment %}
 
-<form action="" name="form_top_page" id="form_top_page" method="post">
+<!--<form action="" name="form_top_page" id="form_top_page" method="post">-->
+<!--    {% csrf_token %}-->
+<!--    <div class="form-control">-->
+<!--        <div class="row m-1">-->
+<!--            <select id="next_step1" name="next_step1" class="form-select">-->
+<!--                {% for category1 in all_category1s %}-->
+<!--                    <option value="{{ app.name }}">{{ category1.category1 }}</option>-->
+<!--                {% endfor %}-->
+<!--            </select>-->
+<!--            <select id="next_step2" name="next_step2" class="form-select">-->
+<!--                {% for category2 in all_category2s %}-->
+<!--                    <option value="{{ app.name }}">{{ category2.category2 }}</option>-->
+<!--                {% endfor %}-->
+<!--            </select>-->
+<!--            <div class="col-2"><button class="btn btn-primary mt-2" type="submit">登録</button></div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</form>-->
+{% endcomment %}
+<br>
+
+<form name="form_top_page" id="form_top_page" method="post">
     {% csrf_token %}
     <div class="form-control">
         <div class="row m-1">
-            <select id="next_step1" name="next_step1" class="form-select">
-                {% for category1 in all_category1s %}
-                    <option value="{{ app.name }}">{{ category1.category1 }}</option>
+                {% for rankdatas in rankdatas %}
+                <div class="col-2 px-0">{{ rankdatas.label }}{{ rankdatas }}</div>
                 {% endfor %}
-            </select>
-            <select id="next_step2" name="next_step2" class="form-select">
-                {% for category2 in all_category2s %}
-                    <option value="{{ app.name }}">{{ category2.category2 }}</option>
-                {% endfor %}
-            </select>
-            <div class="col-2"><button class="btn btn-primary mt-2" type="submit">登録</button></div>
+                <div class="col-2"><button class="btn btn-primary mt-2" type="submit">登録</button></div>
         </div>
     </div>
 </form>
+<br>
 <br>
 
 <h3>Category1</h3>
