--- a/templates/rank/top.html
+++ b/templates/rank/top.html
@@ -27,18 +27,7 @@
 <br>
 
 <h3>ランキング登録</h3>
-{% comment %}
-{{ rankdatas.0.as_p }}
-{{ rankdatas.0.as_ul }}
-{{ rankdatas.0.as_table }}
-{% endcomment %}
-
-{{ rankdatas }}
-<br>
-<br>
-
-
-<form name="form_top_page" id="form_top_page" method="post">
+<form name="form_top_page" id="form_top_page" method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-control">
         <div class="row m-1">
@@ -46,6 +35,8 @@
                 <div class="col-2 px-0">{{ rankdatas.label }}{{ rankdatas }}</div>
                 {% endfor %}
                 <div class="col-2"><button class="btn btn-primary mt-2" type="submit">登録</button></div>
+                <input class="form-control" type="file" name="product_pict">
+<!--                <label class="col-2 btn btn-primary">Choose file <input type="file" hidden></label>-->
         </div>
     </div>
 </form>
