--- a/templates/base.html
+++ b/templates/base.html
@@ -2,6 +2,79 @@
 <html lang="ja">
 {% load static %}
 
+<!--javascript処理-->
+<script type="text/javascript">
+{% comment %}
+    var ajax_next_step = '{% url 'quality_change_management:ajax_next_step' %}';
+    var ajax_department = '{% url 'quality_change_management:ajax_department' %}';
+    var ajax_user = '{% url 'quality_change_management:ajax_user' %}';
+    var ajax_file_list = '{% url 'quality_change_management:ajax_file_list' %}';
+    var csrf_token = '{{ csrf_token }}';
+{% endcomment %}
+
+    {% comment %}
+    var ajax_file_upload = '{% url 'quality_change_management:ajax_file_upload' %}';
+    var ajax_file_delete = '{% url 'quality_change_management:ajax_file_delete' %}';
+    {% endcomment %}
+</script>
+
+{% comment %}
+<script src="{% static 'js/quality_change_management.js' %}"></script>
+
+<!-- Select2 JS -->
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        // Select2を有効化する
+        $('.select2').select2();
+    });
+</script>
+{% endcomment %}
+
+<!--各ヘッダー格納-->
+<head>
+    <!--各タイトル格納-->
+    <title>{% block title %}{% endblock %}</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+
+    <!--CSS-->
+    <link rel="stylesheet" type="text/css" href="{% static 'css/quality_change_management.css' %}">
+
+    <!--チャートJS-->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <!-- JQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+    <!-- Select2 CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+    <style>
+    .select2-container .select2-selection--single {
+        height: calc(1.5em + .75rem + 2px);
+        padding: .375rem .75rem;
+    }
+    .select2-container--default .select2-selection--single .select2-selection__rendered {
+        line-height: 1.5;
+        color: #495057;
+    }
+    .select2-container--default .select2-selection--single .select2-selection__arrow {
+        height: calc(1.5em + .75rem + 2px);
+    }
+    </style>
+    <!-- Select2 JS -->
+    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
+    <!-- Favicons -->
+    <link rel="icon" href="{% static 'img/favicon.ico' %}">
+
+    <!--各ヘッダー格納-->
+    {% block header %}{% endblock %}
+</head>
+
 <!--baseヘッダー-->
 <body class="pt-5">
 <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
@@ -44,7 +117,7 @@
                 </li>
             </ul>
             <span class="navbar-text">
-                (工事中)ログインユーザー：{{ department }}　{{ request.user.last_name }}　{{ request.user.first_name }}　　
+                (工事中)ログインユーザー：{{ request.user }}さん
             </span>
         </div>
     </div>
@@ -55,78 +128,6 @@
     <div class="bg-light p-5 rounded">
         {% block content %}{% endblock %}
     </div>
-
-<!--javascript処理-->
-<script type="text/javascript">
-{% comment %}
-    var ajax_next_step = '{% url 'quality_change_management:ajax_next_step' %}';
-    var ajax_department = '{% url 'quality_change_management:ajax_department' %}';
-    var ajax_user = '{% url 'quality_change_management:ajax_user' %}';
-    var ajax_file_list = '{% url 'quality_change_management:ajax_file_list' %}';
-    var csrf_token = '{{ csrf_token }}';
-{% endcomment %}
-
-    {% comment %}
-    var ajax_file_upload = '{% url 'quality_change_management:ajax_file_upload' %}';
-    var ajax_file_delete = '{% url 'quality_change_management:ajax_file_delete' %}';
-    {% endcomment %}
-</script>
-
-{% comment %}
-<script src="{% static 'js/quality_change_management.js' %}"></script>
-
-<!-- Select2 JS -->
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        // Select2を有効化する
-        $('.select2').select2();
-    });
-</script>
-{% endcomment %}
-
-
 </main>
 </body>
-
-<!--各ヘッダー格納-->
-<head>
-    <!--各タイトル格納-->
-    <title>{% block title %}{% endblock %}</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-
-    <!--CSS-->
-    <link rel="stylesheet" type="text/css" href="{% static 'css/quality_change_management.css' %}">
-
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-
-    <!-- Select2 CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
-    <style>
-    .select2-container .select2-selection--single {
-        height: calc(1.5em + .75rem + 2px);
-        padding: .375rem .75rem;
-    }
-    .select2-container--default .select2-selection--single .select2-selection__rendered {
-        line-height: 1.5;
-        color: #495057;
-    }
-    .select2-container--default .select2-selection--single .select2-selection__arrow {
-        height: calc(1.5em + .75rem + 2px);
-    }
-    </style>
-    <!-- Select2 JS -->
-    <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
-
-    <!-- Favicons -->
-    <link rel="icon" href="{% static 'img/favicon.ico' %}">
-
-    <!--各ヘッダー格納-->
-    {% block header %}{% endblock %}
-</head>
 </html>
